Assignment4/src/objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Location__c</fullName>
        <description>On which location session is going to happen.</description>
        <inlineHelpText>Give the location on which the session is going to happen.</inlineHelpText>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Sessions__c</fullName>
        <description>How many sessions is going to to happen .</description>
        <inlineHelpText>Give the number of sessions going to happen.</inlineHelpText>
        <label>Number of Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <description>On which date session is going to happen .</description>
        <inlineHelpText>Enter the date on which session is going to happen .</inlineHelpText>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>